@@ -44,6 +44,7 @@ struct stream {
   unsigned int writePos;                // Write position
   unsigned int readPos;                 // Read position
   int flushed;                          // Indicate that we got a flush signal.
+	int num_addresses;                    // Number of addresses associated with stream
 
 	/* stats */
 	struct stream_stat stat;
