@@ -1,6 +1,8 @@
 caputils-0.7.10
 ---------------
 
+	* add: stream_num_addresses to get number of addresses associated with
+	       a stream.
 	* add: [capshow] support for ARP.
 	* add: [capshow] support for showing timestamps relative to first
 	       packet. Enabled by default.
